Vertical Alignment fixed

--- a/src/app/editor/editor.component.css
+++ b/src/app/editor/editor.component.css
@@ -583,6 +583,10 @@
   padding: 0;
   white-space: nowrap;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .editable-div:empty:before {
